docker is now functioning

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,13 @@ services:
       dockerfile: Dockerfile.fastapi
     ports:
       - "8000:8000"
+    environment:
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
     volumes:
       - uploads-data:/app/uploads
+      - ./ml_logic/vector-store:/app/vector-store
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   uploads-data:
