--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -1,11 +1,17 @@
-# Dockerfile.fastapi
 FROM python:3.11
 
 WORKDIR /app
 
-COPY mock.py .
-RUN pip install fastapi uvicorn pydantic requests
+# Only copy requirements first to leverage Docker cache
+COPY requirements.txt .
 
+# Install dependencies before copying full source
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Now copy the rest of your code
+COPY . .
+
+RUN python3 -m nltk.downloader stopwords punkt_tab wordnet
 EXPOSE 8000
 
 CMD ["uvicorn", "mock:app", "--host", "0.0.0.0", "--port", "8000"]
